# MatrAIx

./: .env.example  .gitignore  .gitmodules  AGENTS.md  ANALYSIS_INDEX.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Contribution.md  DEDUPLICATION_ANALYSIS.txt  DEDUP_QUICK_REFERENCE.md  NOTICE  README.md  pyproject.toml  skills-lock.json
environment/adapters/simpleqa/: README.md  manifest.toml  pyproject.toml  run_simpleqa.yaml  simpleqa_oracle.yaml  simpleqa_parity_claude_opus4_6.yaml
environments/microverse/: .env.example  .gitignore  Architecture.md  Protocol.md  QUICKSTART.md  README.md  World.md  docker-compose.yml  pyproject.toml
environments/microverse/data/: drift_codes.template.json  pilot_drift_analysis.json  pilot_eval.json
environments/microverse/data/personas/: agent_001.json  agent_002.json  agent_003.json  agent_004.json  agent_005.json  agent_006.json  agent_007.json  agent_008.json  agent_009.json  agent_010.json  agent_011.json  agent_012.json  agent_013.json  agent_014.json  agent_015.json  agent_016.json  agent_017.json  agent_018.json  agent_019.json  agent_020.json  agent_021.json  agent_022.json  agent_023.json  agent_024.json  agent_025.json
environments/microverse/data/results/: drift_analysis_seed1.json  drift_analysis_threshold.json  eval_seed1.json  threshold_sweep_seed1.json
environments/microverse/data/runs/: acute_seed1.json  acute_seed2.json  acute_seed3.json  control_seed1.json  control_seed2.json  control_seed3.json  mild_seed1.json  mild_seed2.json  mild_seed3.json  thresh150_seed1.json  thresh40_seed1.json  thresh80_seed1.json
environments/microverse/explanations/: one-pager.html  standalone-explainer.html
environments/microverse/findings/: anti_self_deception.md
environments/microverse/infra/: README-DEPLOY.md  README.md  apigateway.tf  database.tf  lambda.tf  network.tf  outputs.tf  scheduler.tf  stepfunctions.tf  variables.tf  versions.tf
environments/microverse/mircoverse/: BUILD_SPEC.md  MECHANICS_DECISIONS.md  __init__.py  config.py
environments/microverse/paper/: MircoVerse_workshop_paper.md
environments/microverse/scripts/: _watch_stage1.py  analyze_drift.py  evaluate_runs.py  exp_threshold_sweep.py  export_replay.py  generate_personas.py  graph_memory.py  make_figures.py  make_pdf.py  run_local_llm.py  run_overnight.py  run_real_inproc.py  run_seed.py  run_three_settings.py  setup_worker_dbs.py  wf_asset_curation.js
environments/microverse/ui/: index.html  package-lock.json  package.json  vite.config.ts
(+4208 files in other folders)
