[project]
name = "mircoverse"
version = "0.1.0"
description = "MircoVerse — a behavioral instrument measuring LLM identity drift under moral pressure (greenfield engine per World.md / Architecture.md / Protocol.md)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "asyncpg>=0.29",          # async Postgres driver (local now, Aurora-portable later)
    "pyyaml>=6.0",            # experiment manifests
    "httpx>=0.27",            # reference + mock agent HTTP client
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "anyio>=4.0",
]
# Participant-side reference agent only; the engine never calls an LLM on the hot path.
agent = [
    "anthropic>=0.25",
    "openai>=1.30",
    "boto3>=1.34",            # AWS Bedrock provider (standard AWS creds chain)
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["mircoverse*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["mircoverse/tests"]
addopts = "-q"
